Fix layout bug (flexbox nav should only be for desktop menu)

--- a/src/components/DesktopMenu/index.module.scss
+++ b/src/components/DesktopMenu/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../assets/shared-styles/colors.module.scss';
 @import '../../assets/shared-styles/shared.module.scss';
 
-nav {
+nav.desktopNav {
   margin: 1.45rem 1.0875rem;
   display: flex;
   flex-direction: row;
